refactor, add analyzer in memoryindex