@@ -20,6 +20,7 @@ import org.apache.lucene.util.QueryBuilder;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
+import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.compute.ann.Evaluator;
 import org.elasticsearch.compute.ann.Fixed;
 import org.elasticsearch.compute.ann.Position;
@@ -29,6 +30,7 @@ import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.inference.ChunkingSettings;
 import org.elasticsearch.lucene.search.uhighlight.CustomPassageFormatter;
 import org.elasticsearch.lucene.search.uhighlight.CustomUnifiedHighlighter;
+import org.elasticsearch.lucene.search.uhighlight.QueryMaxAnalyzedOffset;
 import org.elasticsearch.lucene.search.uhighlight.Snippet;
 import org.elasticsearch.xpack.core.common.chunks.MemoryIndexChunkScorer;
 import org.elasticsearch.xpack.core.common.chunks.ScoredChunk;
@@ -323,6 +325,22 @@ public class TopSnippets extends EsqlScalarFunction implements OptionalArgument,
         return value != null ? ((Number) value).intValue() : defaultValue;
     }
 
+    /**
+     * Normalises an option value produced by {@link Options#populateMap} into a {@code List<String>}.
+     * After the populateMap change, a KEYWORD option may arrive as either a plain {@code String}
+     * (scalar literal) or a {@code List<String>} (array literal such as {@code ["<b>","<em>"]}).
+     */
+    @SuppressWarnings("unchecked")
+    private static List<String> toStringList(Object value, String defaultValue) {
+        if (value == null) {
+            return List.of(defaultValue);
+        }
+        if (value instanceof List<?>) {
+            return (List<String>) value;
+        }
+        return List.of((String) value);
+    }
+
     @Evaluator(warnExceptions = { IllegalArgumentException.class })
     static void process(
         BytesRefBlock.Builder builder,
@@ -408,7 +426,7 @@ public class TopSnippets extends EsqlScalarFunction implements OptionalArgument,
         UnifiedHighlighter.Builder builder = UnifiedHighlighter.builder(session.searcher(), session.analyzer());
         builder.withFormatter(formatter);
         builder.withBreakIterator(() -> new CustomSeparatorBreakIterator(CustomUnifiedHighlighter.MULTIVAL_SEP_CHAR));
-
+        int maxAnalyzedOffset = IndexSettings.MAX_ANALYZED_OFFSET_SETTING.get(Settings.EMPTY);
         CustomUnifiedHighlighter highlighter = new CustomUnifiedHighlighter(
             builder,
             UnifiedHighlighter.OffsetSource.ANALYSIS,
@@ -418,13 +436,15 @@ public class TopSnippets extends EsqlScalarFunction implements OptionalArgument,
             query,
             0,
             Integer.MAX_VALUE - 1,
-            Integer.MAX_VALUE,
-            IndexSettings.MAX_ANALYZED_OFFSET_SETTING.getKey(),
+            maxAnalyzedOffset,
+            QueryMaxAnalyzedOffset.create(-1, maxAnalyzedOffset),
+            // TODO(mromaios): What do we do about max offset. This is an index level setting
             false,
             false
         );
 
-        var leafReader = session.reader().leaves().get(0).reader();
+        var leafReader = session.reader().leaves().getFirst().reader();
+        //TODO(mromaios): is there a case where leaves can be empty?
         List<String> result = new ArrayList<>(snippets.size());
         for (String snippet : snippets) {
             Snippet[] highlighted = highlighter.highlightField(leafReader, 0, () -> snippet);
@@ -452,11 +472,14 @@ public class TopSnippets extends EsqlScalarFunction implements OptionalArgument,
             numSnippets = numSnippets(opts);
             numWords = numWords(opts);
             if (Boolean.TRUE.equals(opts.get(HIGHLIGHT))) {
-                String preTags = opts.containsKey(PRE_TAGS) ? (String) opts.get(PRE_TAGS) : DEFAULT_PRE_TAGS;
-                String postTags = opts.containsKey(POST_TAGS) ? (String) opts.get(POST_TAGS) : DEFAULT_POST_TAGS;
+                List<String> preTags = toStringList(opts.get(PRE_TAGS), DEFAULT_PRE_TAGS);
+                List<String> postTags = toStringList(opts.get(POST_TAGS), DEFAULT_POST_TAGS);
+                //TODO(mromaios): the array complicates things, AFAIU the current DefaultHighlighter also just gets the first tag to use
+                //do we really need multiple tags support here? Maybe not, but only have this in the HIGHLIGHT cmd
                 String encoderType = opts.containsKey(ENCODER) ? (String) opts.get(ENCODER) : DEFAULT_ENCODER;
                 Encoder encoder = "html".equals(encoderType) ? new SimpleHTMLEncoder() : new DefaultEncoder();
-                highlightFormatter = new CustomPassageFormatter(preTags, postTags, encoder, 0);
+                //TODO(mromaios): We could use HighlightUtils.Encoders.HTML, but it's under search/phase/subphase which feels weird.
+                highlightFormatter = new CustomPassageFormatter(preTags.getFirst(), postTags.getFirst(), encoder, 0);
             }
         } else {
             numSnippets = DEFAULT_NUM_SNIPPETS;
@@ -464,6 +487,7 @@ public class TopSnippets extends EsqlScalarFunction implements OptionalArgument,
         }
 
         ChunkingSettings chunkingSettings = new SentenceBoundaryChunkingSettings(numWords, 0);
+        //TODO(mromaios): add Analyzer support
         MemoryIndexChunkScorer scorer = new MemoryIndexChunkScorer();
 
         return new TopSnippetsEvaluator.Factory(
